apps/hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-hermes
spec:
  ports:
    - name: https
      protocol: TCP
      port: 9119
      targetPort: 9119
