apps/hermes/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-hermes-slice
  labels:
    kubernetes.io/service-name: external-hermes
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9119
endpoints:
  - addresses:
      - "192.168.88.200"
    conditions:
      ready: true
